--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
 language: python
 python:
-  - "2.6"
   - "2.7"
-  - "3.2"
-  - "3.3"
   - "3.4"
-# command to install dependencies
+  - "2.6"
+  - "3.3"
+# command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
-    - pip install nosetests
-    - python setup develop
-# command to run tests
-script: nosetests -sxv
+    - 'pip install -e ".[test]"'
+script:
+    - "python ./setup.py nosetests"
