Install and configure isort, black

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,4 @@
-[nosetests]
-match = ^test
-nocapture = 1
-cover-package = pyramid_kvs
-with-coverage = 1
-cover-erase = 1
+[isort]
+profile=black
+src_paths=pyramid_kvs
+skip_glob=venv*
